# quantik

./: .gitignore  CMakeLists.txt  CanonicalGenerator.cpp  CanonicalGenerator.hpp  DummyClass.hpp  GameTree.cpp  GameTree.hpp  GameTreeNode.cpp  GameTreeNode.hpp  Move.cpp  Move.hpp  PieceManager.cpp  PieceManager.hpp  README.md  State.cpp  State.hpp  TransformationGenerator.cpp  canonical_generator.cpp  definitions.hpp  game_tree.cpp  main.cpp  move.cpp  move_generator.cpp  quantik.hpp  state.cpp
data/: _level1.qtk  _level14.qtk  _level15.qtk  _level16.qtk  _level5.qtk  _level6.qtk  _level7.qtk  level14.qtk  level15.qtk  level16.qtk  level2.qtk  level3.qtk  level4.qtk  level5.qtk  level6.qtk  level7.qtk
hexapawn/: Dateien.cpp  main.py
quantik/: CMakeLists.txt  CanonicalGenerator.cpp  GameTree.cpp  GameTree.hpp  GameTreeNode.cpp  GameTreeNode.hpp  Move.hpp  PieceManager.cpp  README.md  State.cpp  State.hpp  quantik.hpp  quantik.sh
quantik/code_server/: main.py
quantik/data/: _level14.qtk  _level2.qtk  _level3.qtk  _level4.qtk  _level5.qtk  _level7.qtk  level1.qtk  level15.qtk  level16.qtk  level2.qtk
quantik/data_generation/: CanonicalGenerator.cpp  CanonicalGenerator.hpp  FileManager.cpp  PieceManager.hpp  State.cpp  main.cpp
quantik/prototype_one/: CanonicalGenerator.hpp  GameTree.cpp  GameTreeNode.cpp  TransformationGenerator.hpp
quantik/prototype_two/: FileManager.cpp  FileManager.hpp  PieceManager.hpp  State.cpp  State.hpp  TimeManager.cpp  TimeManager.hpp  main.cpp  quantik.hpp
quantik/website/: index.html  main.py
quantik/website/css/: normalize.css  style.css
quantik/website/js/: canvas.js  enums.js  game.js  hexapawn.js  network.js  output.js  quantik.js  storage.js
quantik/website/static/: index.html
quantik/website/static/js/: canonical.js  canvas.js  enums.js  game.js  network.js  output.js  quantik.js  storage.js
quantik_cont/: Pipfile  archive.py  data.py  main.py  model_epoch_0.pth  model_epoch_1.pth  nn.py  (+1 more)
(+7 files in other folders)
